# ml-assemblr

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: python-lint.yaml  python-test.yaml  semantic-pr.yaml  trivy.yaml
ml_assemblr/eda/: general.py  non_numerical.py
ml_assemblr/main_components/: base_class.py  base_classes.py  column_type.py  column_types.py  constant.py  data_pod.py  data_pod_list.py  transformer.py
ml_assemblr/main_components/data_pod_method/: df_method.py  getter_and_setter.py
ml_assemblr/main_components/data_pod_methods/: df_methods.py  getters_and_setters.py
ml_assemblr/transformer/cleaner/: categorical_cleaner.py
ml_assemblr/transformer/encoder/: label_encoder.py
ml_assemblr/transformer/ml_common/: cross_validator.py  splitter.py
ml_assemblr/transformer/model/: base_model.py  xgb_model.py
ml_assemblr/transformer/unfit/: bicolumns_operator.py  custom_function_applier.py
ml_assemblr/transfromer/cleaner/: categorical_cleaner.py  utils.py
ml_assemblr/transfromer/column_type/: features_setter.py
ml_assemblr/transfromer/cross_validator/: cross_validator.py
ml_assemblr/transfromers/: aggregator.py  column_devider.py  value_replacer.py
ml_assemblr/utils/: df_utils.py  notebook_utils.py  string_case_utils.py
requirements/: dev-requirements.txt
tests/: conftest.py
tests/test_eda/: test_general.py  test_non_numerical.py
tests/test_main_components/: test_data_pod.py  test_data_pod_list.py  test_transformer.py
tests/test_utils/: test_df_utils.py  test_string_case_utils.py
(+37 files in other folders)
