[tool.poetry]
name = "ml_assemblr"
version = "0.1.0"
description = ""
authors = ["Wisaroot Lertthaweedech <l.wisaroot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pandas = "*"
numpy = "*"
structlog = "^24.1.0"
orjson = "^3.10.1"

[tool.poetry.group.optional.dependencies]
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = { version = "^24.2.0", extras = ["jupyter"] }
isort = "^5.13.2"
ipykernel = "^6.29.3"
ruff = "*"
mypy = "*"
pre-commit = "*"
nbformat = "^5.9.0"
poetry-plugin-export = "^1.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 105
target-version = ['py312']
include = '.*\.(py|ipynb)$'  # All .py and .ipynb files

[tool.isort]
line_length = 105

[tool.ruff]
line-length = 105
target-version = 'py312'
extend-include = ["*.ipynb"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = '**/*.py'
warn_unused_configs = true
ignore_missing_imports = true
ignore_errors = true
